--- a/views/familiash.html
+++ b/views/familiash.html
@@ -295,7 +295,7 @@
           <ul class="footer-links list-unstyled">
             <li><a href="control-parental.html" class="text-light text-decoration-none">Control Parental</a></li>
             <li><a href="indicadores-calidad.html" class="text-light text-decoration-none">Indicadores de calidad</a></li>
-            <li><span class="text-muted link-disabled">Atención al Usuario</span></li>
+            <li><a href="soporte-tecnico.html" class="text-light text-decoration-none">Atención al Usuario</a></li>
             <li><span class="text-muted link-disabled">Prevención de fraudes</span></li>
             <li><a href="limitacion-velocidad.html" class="text-light text-decoration-none">Limitación de velocidad</a></li>
             <li><span class="text-muted link-disabled">Gestión de tráfico</span></li>
@@ -321,8 +321,8 @@
             <li><span class="text-muted link-disabled">Compensación automática</span></li>
             <li><span class="text-muted link-disabled">Seguridad en la red</span></li>
             <li><span class="text-muted link-disabled">Contrato de servicios</span></li>
-            <li><span class="text-muted link-disabled">Resolución 5111 de 2017</span></li>
-            <li><span class="text-muted link-disabled">Denuncias de pornografía infantil</span></li>
+            <li><a href="../docs/resolucioin_5111_de_ 2017.pdf" target="_blank" class="text-light text-decoration-none">Resolución 5111 de 2017</a></li>
+            <li><a href="proteccion-infantil.html" class="text-light text-decoration-none"><i class="bi bi-shield-fill-check me-1"></i>Protección Infantil</a></li>
           </ul>
         </div>
       </div>
