--- a/views/control-parental.html
+++ b/views/control-parental.html
@@ -25,7 +25,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top p-3" role="navigation">
     <div class="container">
-      <a class="navbar-brand d-flex align-items-center gap-2" href="../index.html" aria-label="SH Company Home">
+      <a class="navbar-brand d-flex align-items-center gap-2" href="/inicio" aria-label="SH Company Home">
         <img src="../image/logo.png" alt="SH Company Logo" height="60" width="60">
         <span>SH COMPANY</span>
       </a>
@@ -36,7 +36,7 @@
       
       <div class="collapse navbar-collapse" id="menuNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="/inicio">Inicio</a></li>
           <li class="nav-item"><a class="nav-link" href="empresa.html">Empresa</a></li>
           <li class="nav-item"><a class="nav-link" href="planes.html">Planes</a></li>
           <li class="nav-item"><a class="nav-link" href="pqrs.html">PQRS</a></li>
@@ -641,7 +641,7 @@
 
         <!-- Logo -->
         <div class="col-md-4 mb-3 mb-md-0">
-          <a href="../index.html" class="d-inline-block" aria-label="Ir a página principal de SH COMPANY">
+          <a href="/inicio" class="d-inline-block" aria-label="Ir a página principal de SH COMPANY">
             <img src="../image/logo.png" alt="SH COMPANY SAS - Logotipo oficial" class="footer-logo">
           </a>
         </div>
