--- a/views/familiash.html
+++ b/views/familiash.html
@@ -25,7 +25,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top p-3">
         <div class="container">
-            <a class="navbar-brand d-flex align-items-center gap-2" href="../index.html">
+            <a class="navbar-brand d-flex align-items-center gap-2" href="/inicio">
                 <img src="../image/logo.png" alt="SH Company Logo" class="logo-redondo" height="80">
                 <span>SH COMPANY</span>
             </a>
@@ -34,7 +34,7 @@
             </button>
             <div class="collapse navbar-collapse" id="menuNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/inicio">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="empresa.html">Empresa</a></li>
                     <li class="nav-item"><a class="nav-link" href="planes.html">Planes</a></li>
                     <li class="nav-item"><a class="nav-link" href="pqrs.html">PQRS</a></li>
