--- a/views/limitacion-velocidad.html
+++ b/views/limitacion-velocidad.html
@@ -16,7 +16,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top p-3">
     <div class="container">
-      <a class="navbar-brand d-flex align-items-center gap-2" href="../index.html">
+      <a class="navbar-brand d-flex align-items-center gap-2" href="/inicio">
         <img src="../image/logo.png" alt="SH Company Logo" height="60">
         <span>SH COMPANY</span>
       </a>
@@ -25,7 +25,7 @@
       </button>
       <div class="collapse navbar-collapse" id="menuNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link" href="/inicio">Inicio</a></li>
           <li class="nav-item"><a class="nav-link" href="empresa.html">Empresa</a></li>
           <li class="nav-item"><a class="nav-link" href="planes.html">Planes</a></li>
           <li class="nav-item"><a class="nav-link" href="pqrs.html">PQRS</a></li>
@@ -614,7 +614,7 @@
 
         <!-- Logo -->
         <div class="col-md-4 mb-3 mb-md-0">
-          <a href="../index.html" class="d-inline-block">
+          <a href="/inicio" class="d-inline-block">
             <img src="../image/logo.png" alt="SH COMPANY SAS Logo" class="footer-logo">
           </a>
         </div>
